# gabon-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  garage.toml  garage.toml.example
bench/: correctness.sh  k6-scenario.js  metrics.sh  oha-endpoints.sh
docs/: benchmark-report.md
docs/plans/2026-03-19-kotlin-ktor-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md
docs/plans/2026-03-19-kotlin-ktor-plan/: _index.md  task-001-project-setup.md  task-002-shared-models.md  task-003-database-infra.md  task-004-redis-infra.md  task-005-jwt-service.md  task-006-storage-service.md  task-007-auth-impl.md  task-007-auth-test.md  task-008-video-impl.md  task-008-video-test.md  task-009-like-impl.md  task-009-like-test.md  task-010-social-impl.md  task-010-social-test.md  task-011-profile-impl.md  task-011-profile-test.md  task-012-task-impl.md  task-012-task-test.md  task-013-admin-impl.md  task-013-admin-test.md  task-014-report-impl.md  task-014-report-test.md  task-015-ratelimit-impl.md  task-015-ratelimit-test.md  task-016-integration.md
docs/superpowers/plans/: 2026-03-19-java-modern-impl.md
docs/superpowers/specs/: 2026-03-19-java-modern-design.md
go/: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  sqlc.yaml
go/.claude/: git.local.md
go/.github/workflows/: ci.yml
go/cmd/api/: main.go
go/db/migrations/: 001_init.sql  002_add_missing_indexes.sql  003_add_sign_in.sql
go/db/queries/: admin_user.sql  customer.sql  customer_admin.sql  report.sql  sign_in.sql  task_definition.sql  task_progress.sql  user_follow.sql  video.sql  video_admin.sql  video_like.sql  video_play_record.sql
go/docs/plans/: 2026-02-19-gabon-go-design.md  2026-02-19-gabon-go-impl.md  2026-02-19-integration-tests-design.md  2026-02-19-integration-tests-impl.md  2026-02-19-rate-limiter-design.md  2026-02-20-dockerize-design.md  2026-02-20-dockerize-impl.md  2026-02-20-observability-design.md  2026-02-20-observability-impl.md
java/: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  build.gradle.kts  pom.xml  settings.gradle.kts  upload_videos.py
java/gabon-admin/: Dockerfile.test  pom.xml
java/gabon-common/: pom.xml
java/gabon-service/: Dockerfile.test  implement_video_upload.md  pom.xml
java/gradle/: libs.versions.toml
kotlin/: CLAUDE.md  Dockerfile  Makefile  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
kotlin/gradle/: libs.versions.toml
rust/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  rust-toolchain.toml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: activity.rs  admin.rs  auth.rs  customer.rs  main.rs  middleware.rs  rate_limit.rs  service.rs  social.rs  test_util.rs  token.rs  video.rs
rust/crates/domain/: Cargo.toml
rust/crates/domain/src/: entity.rs  lib.rs
rust/crates/infra/: Cargo.toml
rust/crates/infra/src/: activity_repo.rs  admin_repo.rs  customer_repo.rs  db.rs  lib.rs  redis_store.rs  report_repo.rs  s3_storage.rs  social_repo.rs  video_repo.rs
rust/crates/shared/: Cargo.toml
rust/crates/shared/src/: config.rs  error.rs  lib.rs  pagination.rs  response.rs  traits.rs
rust/docs/: rust-backend-guide.md
rust/migrations/: 2026031500000001_init.sql  2026031500000002_add_missing_indexes.sql  2026031500000003_add_sign_in.sql
scripts/: init-garage.sh
(+439 files in other folders)
