[package]
name = "gabon-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gabon-shared = { path = "../shared" }
gabon-domain = { path = "../domain" }
gabon-infra = { path = "../infra" }
bcrypt = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
deadpool-redis = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
