[package]
name = "gabon-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gabon-shared = { path = "../shared" }
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
